syntax = "proto3";

package customeronboarding.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/wyfcoding/financialtrading/go-api/customeronboarding/v1;customeronboardingv1";

// CustomerOnboardingService 客户开户与 KYC 服务
service CustomerOnboardingService {
    // SubmitApplication 提交开户申请
    rpc SubmitApplication(SubmitApplicationRequest) returns (SubmitApplicationResponse);
    
    // GetApplication 获取申请状态
    rpc GetApplication(GetApplicationRequest) returns (GetApplicationResponse);
    
    // UploadDocument 上传 KYC 证明文件
    rpc UploadDocument(UploadDocumentRequest) returns (UploadDocumentResponse);
}

message SubmitApplicationRequest {
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    string id_number = 4;
    string address = 5;
}

message SubmitApplicationResponse {
    string application_id = 1;
    string status = 2;
}

message GetApplicationRequest {
    string application_id = 1;
}

message GetApplicationResponse {
    string application_id = 1;
    string status = 2; // PENDING, PROCESSING, APPROVED, REJECTED
    string kyc_status = 3;
    google.protobuf.Timestamp submitted_at = 4;
}

message UploadDocumentRequest {
    string application_id = 1;
    string doc_type = 2; // ID_CARD, PASSPORT, SELFIE
    string file_url = 3;
}

message UploadDocumentResponse {
    bool success = 1;
}
